--- a/stylesheets/construct/_figure.scss
+++ b/stylesheets/construct/_figure.scss
@@ -10,24 +10,25 @@ figure {
 
 figcaption {
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.15), 0 0 10px rgba(255, 255, 255, 0.075);
-    padding-top: 3vh;
-    padding-bottom: 3vh;
-    background-color: rgba(0, 0, 0, 0);
+    padding: 5vmax;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.5);
     overflow: hidden;
     transition: 0.2s all ease-in;
     opacity: 0.9;
 
     @include media-breakpoint-up(md) {
-        padding: 10%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        padding: 3vmax;
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .text-reverse & {
         text-shadow: 0 0 3px rgba(0, 0, 0, 0.15), 0 0 10px rgba(0, 0, 0, 0.075);
+        background-color: rgba(0, 0, 0, 0.7);
         opacity: 0.8;
     }
 
@@ -47,7 +48,10 @@ figcaption {
     }
 
     .reveal {
-        opacity: 0;
         transition: 0.2s all ease-in;
+
+        @include media-breakpoint-up(md) {
+            opacity: 0;
+        }
     }
 }
